@@ -14,7 +14,7 @@ custom: panther_gnome_shell/metadata.json share/gnome-shell/extensions/slingshot
 
 
 vala_binary: src/panther_launcher
-*version: 1.1.1
+*version: 1.1.2
 compile_c_options: -DGMENU_I_KNOW_THIS_IS_UNSTABLE
 *vala_check_package: atk
 *vala_check_package: cairo
@@ -32,7 +32,6 @@ compile_c_options: -DGMENU_I_KNOW_THIS_IS_UNSTABLE
 *vala_check_package: pango
 *vala_check_package: pangocairo
 *vala_check_package: x11
-*vala_check_package: zeitgeist-2.0
 *c_library: m
 *vala_source: Backend/App.vala
 *vala_source: Backend/AppSystem.vala
