@@ -1,3 +1,9 @@
+panther_launcher (1.1.2-Debian1) sid; urgency=low
+
+  * Updated support for gnome shell 3.18
+
+ -- Sergio Costas <rastersoft@gmail.com>  Wed, 13 Oct 2015 20:49:03 +0200
+
 panther_launcher (1.1.1-Debian1) sid; urgency=low
 
   * Changes made
